# copy-time-to-clipboard

./: README.md  hh_mm_ss.py  hhmmss.py  pyproject.toml  setup.py  yyyy-mm-dd.py  yyyy-mm-dd_hh_mm_ss.py
